--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "prettier": "^2.7.1",
     "typescript": "^4.8.2"
   },
-  "workspaces": {
-    "packages": [
-      "packages/*"
-    ]
-  }
+  "workspaces": [
+    "apps/*",
+    "shared/*"
+  ]
 }
