--- a/apps/package-a/package.json
+++ b/apps/package-a/package.json
@@ -15,7 +15,7 @@
     "format": "yarn prettier --write \"src/**/*.{js,jsx,ts,tsx,json,md,css}\""
   },
   "dependencies": {
-    "@shared/component-library": "workspace:^",
+    "@shared/component-library": "1.0.0",
     "gatsby": "^4.21.1",
     "gatsby-plugin-typescript": "^4.21.0",
     "react": "^18.1.0",
