--- a/shared/component-library/package.json
+++ b/shared/component-library/package.json
@@ -2,6 +2,7 @@
   "name": "@shared/component-library",
   "packageManager": "yarn@3.2.3",
   "main": "./src/index.ts",
+  "version": "1.0.0",
   "peerDependencies": {
     "react": "*"
   },
